// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <li
    class="Todo"
  >
    -
    <button>
      X
    </button>
    <button>
      Edit
    </button>
  </li>
</DocumentFragment>
`;

exports[`matches snapshot when editing 1`] = `
<DocumentFragment>
  <li
    class="Todo"
  >
    -
    <button>
      X
    </button>
    <button>
      Edit
    </button>
    <div
      class="EditTodo"
    >
      <input
        type="text"
        value=""
      />
      <button>
        Update
      </button>
    </div>
  </li>
</DocumentFragment>
`;
